Increased new item's name from 20 to 50. Removed papddings from List meta section and gaps to eliminated wasted empty space. Moved New Item component from having position fixed to be a part of the VIew List page, fixing glitched position on mobile

--- a/src/components/NewItem/NewItem.module.css
+++ b/src/components/NewItem/NewItem.module.css
@@ -1,14 +1,10 @@
 .newItem {
-    padding: 20px 10px;
+    padding: 10px;
     width: 100dvw;
-    left: 0;
     background-color: var(--modal-bg);
-    position: fixed;
-    bottom: var(--navigation-height);
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
-    z-index: 10;
     border-top: 1px solid rgba(102, 102, 102, 0.5);
     transition: all 0.1s;
 }
