--- a/src/pages/LocalList/LocalList.module.css
+++ b/src/pages/LocalList/LocalList.module.css
@@ -1,21 +1,20 @@
 .List {
     width: 100%;
     height: 100%;
-    max-height: calc(100vh - var(--bottom-offset));
+    max-height: calc(100vh - var(--navigation-height));
     display: grid;
-    grid-template-rows: var(--page-header-height) auto auto 1fr;
+    grid-template-rows: var(--page-header-height) auto auto 1fr auto;
     color: var(--text-color);
     padding: 10px;
     position: relative;
     overflow: hidden;
-    gap: 10px;
 }
 
 .listMeta {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 15px 0;
+    padding: 5px 0;
 }
 .listItemsContainer {
     display: flex;
@@ -23,6 +22,14 @@
     gap: 10px;
     overflow-y: auto;
     padding-bottom: 70px;
+    padding-top: 15px;
+}
+.showMoreButton {
+    text-align: start;
+    color: var(--accent);
+    background-color: transparent;
+    border: none;
+    padding: 10px 0;
 }
 .newItemButton {
     width: 50px;
